<resources>
    <string name="app_name">Battery Charging Monitor</string>

    <string name="title_summary">Summary</string>
    <string name="title_history">History</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Units -->
    <string name="percent" translatable="false">%1$d%%</string>
    <string name="voltage" translatable="false">%1$dmV</string>
    <string name="current" translatable="false">%1$dmA</string>
    <string name="temperature_celsius" translatable="false">%1$.1f°C</string>
    <string name="temperature_fahrenheit" translatable="false">%1$.1f°F</string>
    <string name="count_times">%1$d times</string>
    <string-array name="health_states" translatable="false">
        <item>@string/health_unknown</item>
        <item>@string/health_good</item>
        <item>@string/health_overheat</item>
        <item>@string/health_dead</item>
        <item>@string/health_over_voltage</item>
        <item>@string/health_unspecified_failure</item>
        <item>@string/health_cold</item>
    </string-array>
    <string name="health_unknown">Unknown</string>
    <string name="health_good">Good</string>
    <string name="health_overheat">Overheat</string>
    <string name="health_dead">Dead</string>
    <string name="health_over_voltage">Over Voltage</string>
    <string name="health_unspecified_failure">Unspecified Failure</string>
    <string name="health_cold">Cold</string>
    <string name="power_state_ac" translatable="false">AC</string>
    <string name="power_state_usb" translatable="false">USB</string>
    <string name="power_state_wireless" translatable="false">Wi</string>
    <string name="power_state_mixed" translatable="false">Mix</string>
    <string name="power_state_unknown" translatable="false">\?</string>

    <!-- Summary -->
    <string name="summary_health">Health</string>
    <string name="summary_temperature">Temperature</string>
    <string name="summary_voltage">Voltage</string>
    <string name="summary_current">Current</string>
    <string name="summary_charges_count">Charged</string>
    <string name="menu_battery_settings">Battery Usage</string>

    <!-- Power states -->
    <string name="battery_percent">Battery: %1$d%%.</string>
    <string name="battery_voltage">Voltage: %1$dmV.</string>
    <string name="battery_temperature_celsius">Temperature: %1$.1f°C.</string>
    <string name="battery_temperature_fahrenheit">Temperature: %1$.1f°F.</string>
    <string name="battery_disconnected">Disconnected.</string>
    <string name="battery_ac_charging">Charging with AC.</string>
    <string name="battery_usb_charging">Charging with USB.</string>
    <string name="battery_wireless_charging">Charging with Wireless.</string>
    <string name="battery_charges_count">Charged %1$d times.</string>

    <!-- Preferences -->
    <string name="pref_key_add_to_count" translatable="false">add_to_count</string>
    <string name="pref_key_add_to_count_default" translatable="false">0</string>
    <string name="pref_key_add_to_count_title">Previous Charges</string>
    <string name="pref_key_add_to_count_summary">Number of charges before installing this app</string>
    <string name="pref_key_irrelevant_duration" translatable="false">irrelevant_duration</string>
    <string name="pref_key_irrelevant_duration_default" translatable="false">5</string>
    <string name="pref_key_irrelevant_duration_title">Irrelevant Charging Duration</string>
    <string name="pref_key_irrelevant_duration_summary">Minimum charging duration in seconds assuring entry won\'t be deleted</string>
    <string name="pref_key_temperature_celsius" translatable="false">temperature_in_celsius</string>
    <string name="pref_key_temperature_celsius_default" translatable="false">true</string>
    <string name="pref_key_temperature_celsius_title">Temperature scale</string>
    <string name="pref_key_temperature_celsius_summaryOn">Temperature in Celsius</string>
    <string name="pref_key_temperature_celsius_summaryOff">Temperature in Fahrenheit</string>

    <!-- History -->
    <string name="history_list_item_percentage_increase" translatable="false">%1$d%% &#x2192; %2$d%%</string>
    <string name="history_list_item_percentage_while_charging" translatable="false">%1$d%% &#x2192; ---</string>
    <string name="history_list_item_duration">%1$dh %2$dm %3$ds</string>
    <string name="history_list_selected_count">Selected: %1$d</string>
    <string name="history_list_menu_merge">Merge</string>
    <string name="history_list_menu_delete">Delete</string>
    <string name="history_list_counted_entries_merged">Merged %1$d entries</string>
    <string name="history_list_counted_entries_deleted">Deleted %1$d entries</string>
    <string name="history_list_confirm_merge">Do you really want to merge this items?</string>
    <string name="history_list_confirm_delete">Do you really want to delete this items?</string>
    <string name="menu_history_list_clear_entries">Clear Entries</string>

    <!-- History Details -->
    <string name="history_details_title">Charging Details</string>
    <string name="history_details_duration">Duration</string>
    <string name="history_details_charge_bump">Charge</string>
    <string name="history_details_charger_type">Charger Type</string>
    <string name="history_details_start_temp">Initial Temperature</string>
    <string name="history_details_stop_temp">Finished Temperature</string>
    <string name="history_details_start_voltage">Initial Voltage</string>
    <string name="history_details_stop_voltage">Finished Voltage</string>
    <string name="history_details_not_finished" translatable="false">---</string>

    <!-- Errors -->
    <string name="error_failed_to_start_charging">Failed to save this charging.</string>
    <string name="error_failed_complete_charging">Failed to complete charging.</string>
</resources>
