<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:minWidth="@dimen/history_detail_min_width">

    <TextView android:text="@string/history_details_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:background="@color/colorPrimaryDark"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:gravity="center"
        android:textColor="@color/colorOnBackgroundText"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/abc_list_item_padding_horizontal_material"
        app:columnCount="2">

        <TextView android:id="@+id/start_date" tools:text="27 cze 2015 20:34"
            android:textSize="18dp"
            android:gravity="center"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal"
            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"/>

        <TextView android:text="@string/history_details_duration"
            android:layout_marginBottom="4dp"
            android:textSize="16dp" />

        <TextView android:id="@+id/duration" tools:text="0g25m13s"
            android:textSize="16dp"
            app:layout_gravity="fill_horizontal"
            android:gravity="right"
            android:textColor="@color/colorPrimaryTextDark" />

        <TextView android:text="@string/history_details_charge_bump"
            android:layout_marginBottom="4dp"
            android:textSize="16dp" />

        <TextView android:id="@+id/charge_bump" tools:text="57% &#x2192; 68%"
            android:textSize="16dp"
            app:layout_gravity="fill_horizontal"
            android:gravity="right"
            android:textColor="@color/colorPrimaryTextDark" />

        <TextView android:text="@string/history_details_charger_type"
            android:layout_marginBottom="4dp"
            android:textSize="16dp" />

        <TextView android:id="@+id/charger_type" tools:text="USB"
            android:textSize="16dp"
            app:layout_gravity="fill_horizontal"
            android:gravity="right"
            android:textColor="@color/colorPrimaryTextDark" />

        <TextView android:text="@string/history_details_start_temp"
            android:layout_marginBottom="4dp"
            android:textSize="16dp" />

        <TextView android:id="@+id/start_temp" tools:text="35.6°C"
            android:textSize="16dp"
            app:layout_gravity="fill_horizontal"
            android:gravity="right"
            android:textColor="@color/colorPrimaryTextDark" />

        <TextView android:text="@string/history_details_stop_temp"
            android:layout_marginBottom="4dp"
            android:textSize="16dp" />

        <TextView android:id="@+id/stop_temp" tools:text="38.6°C"
            android:text="@string/history_details_not_finished"
            android:textSize="16dp"
            app:layout_gravity="fill_horizontal"
            android:gravity="right"
            android:textColor="@color/colorPrimaryTextDark" />

        <TextView android:text="@string/history_details_start_voltage"
            android:layout_marginBottom="4dp"
            android:textSize="16dp" />

        <TextView android:id="@+id/start_voltage" tools:text="3900mV"
            android:textSize="16dp"
            app:layout_gravity="fill_horizontal"
            android:gravity="right"
            android:textColor="@color/colorPrimaryTextDark" />

        <TextView android:text="@string/history_details_stop_voltage"
            android:textSize="16dp" />

        <TextView android:id="@+id/stop_voltage" tools:text="4200mV"
            android:text="@string/history_details_not_finished"
            android:textSize="16dp"
            app:layout_gravity="fill_horizontal"
            android:gravity="right"
            android:textColor="@color/colorPrimaryTextDark" />
    </android.support.v7.widget.GridLayout>

</LinearLayout>